Perkin-UAT/force-app/main/default/objects/Analytical_Snapshot__c/Analytical_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Analytical Snapshot</label>
    <nameField>
        <label>Analytical Sanpshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytical Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>