Perkin-UAT/force-app/main/default/objects/Analytical_Snapshot__c/fields/Sum_of_Commit_Rev__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Commit_Rev__c</fullName>
    <label>Sum of Commit (Rev)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>