Perkin-UAT/force-app/main/default/objects/Analytical_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Owner__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Sum_of_Best_Case_Rev__c</columns>
    <columns>Sum_of_Closed_Rev__c</columns>
    <columns>Sum_of_Commit_Rev__c</columns>
    <columns>Sum_of_Quota_Rev__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>